apps/test-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
